--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,5 +1,5 @@
 name: Your Name
-studentNumber: z1234567 # if you're not at UNSW, your org name, e.g. BVN
+studentNumber: BVN # if you're not at UNSW, your org name, e.g. BVN
 officialEmail: noIdea@unsw.edu.au
 contactEmail: # don't write on this line
   firstBit: firstName.Lastname # this avoids spam, the @ is implied
