--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,9 +1,9 @@
 name: Your Name
 studentNumber: BVN # if you're not at UNSW, your org name, e.g. BVN
-officialEmail: noIdea@unsw.edu.au
+officialEmail: __@unsw.edu.au
 contactEmail: # don't write on this line
-  firstBit: firstName.Lastname # this avoids spam, the @ is implied
-  otherBit: whereIwork.com
+  firstBit: Simon.Byng # this avoids spam, the @ is implied
+  otherBit: gmail.com
 # accounts
-stackOverflowLink: https://stackoverflow.com/users/1835727/ben
-github: notionparallax
+stackOverflowLink: https://stackoverflow.com/users/19050611/simonb
+github: SimonByng311219! 
