--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,4 +1,4 @@
-name: Your Name
+name: SimonB
 studentNumber: BVN # if you're not at UNSW, your org name, e.g. BVN
 officialEmail: __@unsw.edu.au
 contactEmail: # don't write on this line
